# solana-api-key-manager

./: .gitignore  Anchor.toml  DEVNET_EVIDENCE.md  HACKATHON_SUBMISSION.md  README.md  SUBMISSION.md  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/: cli.ts  sdk.ts
docs/: index.html
programs/api-key-manager/: Cargo.toml
programs/api-key-manager/src/: lib.rs
scripts/: deploy-and-test.sh  deploy-devnet.sh  make_video.py  try-airdrop.sh
tests/: api-key-manager.ts
