[package]
name = "api-key-manager"
version = "0.1.0"
description = "On-chain API key management system for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "api_key_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
